<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">WELCOME!!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="contacts">Contact</string>
    <string name="ok">OK</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="drinks">Select Drink</string>
    <string name="tea">Tea</string>
    <string name="coffee">Coffee</string>
    <string name="juice">Juice</string>
    <string name="milkshake">Milk Shake</string>
    <string name="ptea">$ 1</string>
    <string name="pcoffee"></string>
    <string name="pcof">$ 1.5</string>
    <string name="pjui">$ 1.75</string>
    <string name="pmil">$ 2</string>
    <string name="order">ORDER</string>
    <string name="title_activity_fourth">FourthActivity</string>
    <string name="food">Select Food</string>
    <string name="burger">Burger</string>
    <string name="noodles">Noodles</string>
    <string name="muffin">Muffin</string>
    <string name="sandwich">Sandwich</string>
    <string name="pburger">$ 2</string>
    <string name="pnoodles">$ 2.5</string>
    <string name="pmuffin">$1.25</string>
    <string name="psandwich">$ 2.5</string>
    <string name="orders">ORDER</string>
    <string name="title_activity_fifth">FifthActivity</string>
    <string name="title_activity_final">FinalActivity</string>
    <string name="title_activity_last">LastActivity</string>
    <string name="bill">BILL</string>
    <string name="amt">AMOUNT</string>
    <string name="ay">OK</string>
    <string name="generate">GENERATE</string>
    <string name="amts">Amount(in $)</string>
    <string name="dollar">$</string>
    <string name="title_activity_rate">RateActivity</string>
    <string name="goahead">GO FURTHER</string>

</resources>
