<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ThirdActivity"
    android:background="@drawable/nbjbhb" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/drinks"
        android:textSize="30sp" 
        android:textColor="#FFA500"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="70dp"
        android:text="@string/tea"
        android:textSize="20sp" 
        android:textColor="#FFFF00"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="18dp"
        android:text="@string/coffee"
        android:textSize="20sp"
        android:textColor="#FFFF00" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/ptea"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#FF0000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignTop="@+id/checkBox2"
        android:text="@string/pcof"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FF0000" 
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_below="@+id/checkBox2"
        android:layout_marginTop="17dp"
        android:text="@string/juice" 
        android:textSize="20sp"
       android:textColor="#FFFF00"
       android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignTop="@+id/checkBox3"
        android:text="@string/pjui"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox3"
        android:layout_below="@+id/checkBox3"
        android:layout_marginTop="16dp"
        android:text="@string/milkshake" 
        android:textSize="20sp"
        android:textColor="#FFFF00"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignTop="@+id/checkBox4"
        android:text="@string/pmil"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#FF0000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:layout_toRightOf="@+id/checkBox3"
        android:text="@string/order"
        android:textColor="#008000"
        android:textStyle="bold"
        android:onClick="onClickButton" />

</RelativeLayout>
