<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FourthActivity"
    android:background="@drawable/vgv" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/food"
        android:textColor="#FF1493"
        android:textSize="40sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="42dp"
        android:textColor="#00FFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/burger" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="16dp"
        android:textColor="#00FFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/noodles" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/checkBox2"
        android:layout_marginTop="20dp"
        android:textColor="#00FFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/muffin" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox3"
        android:layout_below="@+id/checkBox3"
        android:layout_marginTop="22dp"
        android:textColor="#00FFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/sandwich" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_alignRight="@+id/textView1"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#FFFF00"
        android:text="@string/pburger" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox2"
        android:layout_alignBottom="@+id/checkBox2"
        android:layout_alignLeft="@+id/textView2"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#FFFF00"
        android:text="@string/pnoodles" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox3"
        android:layout_alignBottom="@+id/checkBox3"
        android:layout_alignLeft="@+id/textView3"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#FFFF00"
        android:text="@string/pmuffin" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox4"
        android:layout_alignBottom="@+id/checkBox4"
        android:layout_alignLeft="@+id/textView4"
         android:textSize="20sp"
         android:textColor="#FFFF00"
         android:textStyle="bold"
        android:text="@string/psandwich" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:textColor="#00FF00"
         android:textSize="30sp"
         android:textStyle="bold"
         android:onClick="onClickButton"
        android:text="@string/orders" />

</RelativeLayout>
